Fixing layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -143,7 +143,7 @@ a {
 footer {
   display: flex;
   align-items: center;
-  margin-top: auto;
+  /* margin-top: auto; */
   box-shadow: 0 0 5px #e5e5e5;
 }
 
@@ -161,24 +161,23 @@ footer p {
   flex-direction: column;
   padding: 0 1em;
   width: 100%;
+  max-width: 1000px;
 }
 
 .home-container {
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
   align-items: center;
   gap: 2em;
   margin: auto;
 }
 
 .pct-calculators-container {
-  max-width: 1000px;
   margin: auto;
 }
 
 .unit-converters-container {
   margin: 0 auto auto;
-  max-width: 1000px;
 }
 
 .age-container {
